Intro cards update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <p class="card-text p-2 mx-2 mt-3">
                     <strong>BTS</strong> (Korean: 방탄소년단; Romanization:
                     Bangtan Sonyeondan; lit. Bulletproof Boy Scouts), is a South
-                    Korean boy band consisting of 7 membersm namely:
+                    Korean boy band consisting of 7 members, namely:
                     <strong>RM</strong>, <strong>Jin</strong>,
                     <strong>Suga</strong>, <strong>J-Hope</strong>,
                     <strong>Jimin</strong>, <strong>V</strong> and
@@ -75,81 +75,68 @@
             <div class="col-4 p-2">
               <div class="card p-2">
                 <div class="card-body">
-                  <h4 class="card-title">Their music...</h4>
+                  <h4 class="card-title">Their music and lyrics...</h4>
                   <p class="card-text p-2 mx-2 mt-3">
                     Their musical style incorporates a wide range of genres pop,
-                    hip-hop, R&B, dance/electronic, latin pop, urban etc
+                    hip-hop, R&B, dance/electronic, latin pop, urban neosoul and
+                    many more, and their lyrics focus on social issues, mental
+                    health and the youth. They co-produce and co-write most of
+                    their songs.
                   </p>
-                  <a href="#" class="btn btn-outline-secondary">Outline</a>
                 </div>
               </div>
             </div>
-            <div class="col-4 py-3">
-              <div class="card border-primary">
+            <div class="col-4 p-2">
+              <div class="card p-2">
                 <div class="card-body">
-                  <h3 class="card-title">Card</h3>
-                  <p class="card-text">lead-in to additional content.</p>
-                  <a href="#" class="btn btn-outline-secondary">Outline</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-4 py-3">
-              <div class="card border-primary">
-                <div class="card-body">
-                  <h3 class="card-title">Card</h3>
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content and more spporting text below ...
-                    content. additional content.
+                  <h4 class="card-title">Their fanbase...</h4>
+                  <p class="card-text p-2 mx-2 mt-3">
+                    BTS is supported since its beginning by a hugely loyal,
+                    dedicated, proud and active community, known as
+                    <strong>A R M Y</strong> (Adorable Representative M.C. for
+                    Youth.) <br />
+                    <em
+                      >"ARMY stands apart from other fandoms through the ways it
+                      has mobilsed with an unrivaled level of
+                      organization..."</em
+                    >
+                    <br />
+                    - Time magazine, Nov 2020
                   </p>
-                  <a href="#" class="btn btn-outline-secondary">Outline</a>
                 </div>
               </div>
             </div>
-            <div class="col-4 py-3">
-              <div class="card border-primary">
+            <div class="col-4 p-2">
+              <div class="card p-2">
                 <div class="card-body">
-                  <h3 class="card-title">Card</h3>
-                  <p class="card-text">With more more more supporting text.</p>
-                  <a href="#" class="btn btn-outline-secondary">Outline</a>
+                  <h4 class="card-title">Their accolades...</h4>
+                  <p class="card-text p-2 mx-2 mt-3">
+                    Almost 10 years since their debut, the group has uncountable
+                    accolades from repeated number-one songs in charts around
+                    the world, to concequent sold-out concerts, numerous awards
+                    and brands ambassadoring to addressing, thrice, the United
+                    Nations General Assembly.
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="col-4 py-3">
-              <div class="card border-primary">
+            <div class="col-4 p-2">
+              <div class="card p-2">
                 <div class="card-body">
-                  <h3 class="card-title">Card</h3>
-                  <p class="card-text">With supporting text.</p>
-                  <a href="#" class="btn btn-outline-secondary">Outline</a>
+                  <h4 class="card-title">In 2023...</h4>
+                  <p class="card-text p-2 mx-2 mt-3">
+                    They are currently on pause of their group activities and
+                    focusing on their individual projects, while Jin has already
+                    enlisted for the mandatory South Korean military service,
+                    and J-Hope will be the next one to follow shortly. Their
+                    much waited reunion is foreseen for 2025, and, we, ARMY,
+                    can't wait!!!
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-        <p>
-          Their musical style incorporates a wide range of genres (pop, hip-hop,
-          R&B, dance/electronic etc), while their lyrics focus on social issues,
-          mental health and the youth. The co-produce and co-write most of their
-          songs. By 2022 the group has uncountable accolades from repeated
-          number-one songs in charts around the world, to concequent sold-out
-          concerts, numerous awards and brands ambassadoring to addressing,
-          thrice, the United Nations General Assembly and, most importantly,
-          having the most loyal, dedicated, proud and enormous fanbase, known as
-          <strong>A R M Y</strong> (Adorable Representative M.C. for Youth.)
-        </p>
-
-        <p>
-          They are currently on pause of their group activities and focusing on
-          their individual projects, while Jin has already enlisted for the
-          mandatory South Korean military service, and J-Hope will be the next
-          one to follow shortly.
-        </p>
-
-        <p>
-          Their much waited reunion is foreseen for 2025, and, we, ARMYs, can't
-          wait, right?!!!!!!
-        </p>
       </section>
 
       <section class="profiles">
