Update Intro blocks

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                     <strong>RM</strong>, <strong>Jin</strong>,
                     <strong>Suga</strong>, <strong>J-Hope</strong>,
                     <strong>Jimin</strong>, <strong>V</strong> and
-                    <strong>Jungkook</strong> (in the order they joined the
-                    group).
+                    <strong>Jungkook</strong>.
                   </p>
                 </div>
               </div>
@@ -65,7 +64,7 @@
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their fanbase...</h4>
                   <p class="card-text m-0">
-                    BTS is supported since its beginning by a hugely loyal,
+                    BTS is supported, since its beginning, by a hugely loyal,
                     dedicated, proud and active community, known as
                     <strong>A R M Y</strong> (Adorable Representative M.C. for
                     Youth.)
@@ -83,19 +82,6 @@
                         Time magazine, Nov 2020
                       </figcaption>
                     </figure>
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-4">
-              <div class="card">
-                <div class="card-body m-3">
-                  <h4 class="card-title mb-3">The debut...</h4>
-                  <p class="card-text m-0">
-                    They debuted on <strong>June 13, 2013</strong> under Big Hit
-                    Music (currently part of HYBE Labels) with the lead single
-                    'No More Dream' from the album '2 Cool 4 Skool'.
                   </p>
                 </div>
               </div>
@@ -117,34 +103,40 @@
             <div class="col-4">
               <div class="card">
                 <div class="card-body m-3">
-                  <h4 class="card-title mb-3">Their music and lyrics...</h4>
-                  <p class="card-text m-0">
-                    Their musical style incorporates a wide range of genres like
-                    pop, hip-hop, R&B, dance/electronic, latin pop, urban
-                    neosoul and many more, and their lyrics focus on social
-                    issues, mental health and the youth. They co-produce and
-                    co-write most of their songs.
-                  </p>
+                  <h4 class="card-title mb-3">Their logo...</h4>
+                  <img
+                    src="./img/logo_bts.jpg"
+                    alt="Current BTS logo"
+                    class="card-img-bottom"
+                  />
                 </div>
               </div>
 
               <div class="card mt-4">
                 <div class="card-body m-3">
-                  <h4 class="card-title mb-3">In 2023...</h4>
-                  <p class="card-text m-0">
-                    They are currently on a pause from their group activities
-                    and focusing on their individual projects, while Jin has
-                    already enlisted for the mandatory South Korean military
-                    service, and J-Hope will be the next one to follow shortly.
-                    Their much waited reunion is foreseen for 2025, and, we,
-                    ARMY, can't wait!!!
-                  </p>
+                  <h4 class="card-title mb-3">Our logo...</h4>
+                  <img
+                    src="./img/logo_bts_army.jpg"
+                    alt="Current ARMY logo"
+                    class="card-img-bottom h-100"
+                  />
                 </div>
               </div>
             </div>
 
             <div class="col-4">
               <div class="card">
+                <div class="card-body m-3">
+                  <h4 class="card-title mb-3">Their debut...</h4>
+                  <p class="card-text m-0">
+                    They debuted on <strong>June 13, 2013</strong> under Big Hit
+                    Music (currently part of HYBE Labels) with the lead single
+                    'No More Dream' from the album '2 Cool 4 Skool'.
+                  </p>
+                </div>
+              </div>
+
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their music and lyrics...</h4>
                   <p class="card-text m-0">
@@ -175,8 +167,8 @@
         </div>
       </section>
 
-      <section class="profiles">
-        <div class="profiles-title">
+      <section class="members">
+        <div class="members-title">
           <h3>members</h3>
           <span class="divider"></span>
         </div>
@@ -460,7 +452,7 @@
       </section>
 
       <section class="voting">
-        <div class="voting-bias">
+        <div class="voting-title">
           <h3>vote for your bias</h3>
           <span class="divider"></span>
         </div>
@@ -493,7 +485,7 @@
         </div>
       </section>
       <section class="connect">
-        <div class="connect-with-bts">
+        <div class="connect-title">
           <h3>connect with BTS</h3>
           <span class="divider"></span>
         </div>
