--- a/index.html
+++ b/index.html
@@ -86,16 +86,30 @@
                 </div>
               </div>
 
-              <div class="card mt-4">
+              <div class="card mt-4 mb-5">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their accolades...</h4>
                   <p class="card-text m-0">
                     Almost 10 years since their debut, the group has uncountable
                     accolades from repeated number-one songs in charts around
-                    the world, to concequent sold-out concerts, numerous awards
-                    and brands ambassadoring to addressing, thrice, the United
-                    Nations General Assembly.
+                    the world, to concequent sold-out concerts, numerous awards,
+                    S Korea's and major brands' ambassadoring to addressing,
+                    thrice, the United Nations General Assembly!
                   </p>
+                  <figure>
+                    <blockquote class="blockquote mt-3">
+                      <p>
+                        <em
+                          >"The Triumph of BTS: How seven young superstars
+                          rewrote music-biz rules and became the biggest band in
+                          the world"</em
+                        >
+                      </p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer mt-2">
+                      Rolling Stone article, May 2021
+                    </figcaption>
+                  </figure>
                 </div>
               </div>
             </div>
@@ -141,10 +155,10 @@
                   <h4 class="card-title mb-3">Their music and lyrics...</h4>
                   <p class="card-text m-0">
                     Their musical style incorporates a wide range of genres like
-                    pop, hip-hop, R&B, dance/electronic, latin pop, urban
+                    pop, hip-hop, rap, R&B, dance/electronic, latin pop, urban
                     neosoul and many more, and their lyrics focus on social
-                    issues, mental health and the youth. They co-produce and
-                    co-write most of their songs.
+                    issues, mental health, self love and the struggles of youth.
+                    They co-produce and co-write most of their songs.
                   </p>
                 </div>
               </div>
@@ -558,6 +572,14 @@
         </div>
       </section>
     </div>
-    <footer>GitHub open source code by IfiZamb</footer>
+    <footer>
+      <a
+        href="https://github.com/IfiZa/BTS.git"
+        alt="GitHub link"
+        target="_blank"
+        >GitHub</a
+      >
+      open source code by IfiZamb
+    </footer>
   </body>
 </html>
