--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
                   </p>
                 </div>
               </div>
-
               <div class="card mt-4">
                 <div class="card-body m-3">
-                  <h4 class="card-title mb-3">Their fanbase...</h4>
+                  <h4 class="card-title mb-3">Their fandom...</h4>
                   <p class="card-text m-0">
                     BTS is supported, since its beginning, by a hugely loyal,
                     dedicated, proud and active community, known as
                     <strong>A R M Y</strong> (Adorable Representative M.C. for
-                    Youth.)
+                    Youth).
                     <figure>
                       <blockquote class="blockquote mt-3">
                         <p>
@@ -85,7 +84,6 @@
                   </p>
                 </div>
               </div>
-
               <div class="card mt-4 mb-5">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their accolades...</h4>
@@ -125,7 +123,6 @@
                   />
                 </div>
               </div>
-
               <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Our logo...</h4>
@@ -134,6 +131,19 @@
                     alt="Current ARMY logo"
                     class="card-img-bottom h-100"
                   />
+                </div>
+              </div>
+              <div class="card mt-4 mb-5">
+                <div class="card-body m-3">
+                  <h4 class="card-title mb-3">Their state of play...</h4>
+                  <p class="card-text m-0">
+                    They are currently on a pause from their group activities
+                    and focusing on their individual projects, while Jin has
+                    already enlisted for the mandatory South Korean military
+                    service, and J-Hope will be the next one to follow shortly.
+                    Their much waited reunion is foreseen for 2025, and, we,
+                    ARMY, can't wait!!!
+                  </p>
                 </div>
               </div>
             </div>
@@ -149,7 +159,6 @@
                   </p>
                 </div>
               </div>
-
               <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their music and lyrics...</h4>
@@ -163,17 +172,25 @@
                 </div>
               </div>
 
-              <div class="card mt-4">
+              <div class="card mt-4 mb-5">
                 <div class="card-body m-3">
-                  <h4 class="card-title mb-3">In 2023...</h4>
-                  <p class="card-text m-0">
-                    They are currently on a pause from their group activities
-                    and focusing on their individual projects, while Jin has
-                    already enlisted for the mandatory South Korean military
-                    service, and J-Hope will be the next one to follow shortly.
-                    Their much waited reunion is foreseen for 2025, and, we,
-                    ARMY, can't wait!!!
-                  </p>
+                  <h4 class="card-title mb-3">And you?..</h4>
+                  <p class="card-text m-0">Still not an ARMY?</p>
+                  <figure>
+                    <blockquote class="blockquote mt-3">
+                      <p>
+                        <em
+                          >"But, earlier this year, BTS became inescapable. The
+                          group was everywhere, and everyone seemed to be into
+                          them. To continue ignoring the BTS phenomenon was to
+                          risk missing something bigger than Beatlemania."</em
+                        >
+                      </p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer mt-2">
+                      The New Yorker, June 2022
+                    </figcaption>
+                  </figure>
                 </div>
               </div>
             </div>
@@ -467,7 +484,7 @@
 
       <section class="voting">
         <div class="voting-title">
-          <h3>vote for your bias</h3>
+          <h3>vote</h3>
           <span class="divider"></span>
         </div>
         <div class="poll">
@@ -500,7 +517,7 @@
       </section>
       <section class="connect">
         <div class="connect-title">
-          <h3>connect with BTS</h3>
+          <h3>connect</h3>
           <span class="divider"></span>
         </div>
         <div class="row row-cols-7 g-3 text-center">
