--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
                         </p>
                       </blockquote>
                       <figcaption class="blockquote-footer mt-2">
-                        Time magazine, Nov 2020
+                        <a
+                          href="https://time.com/5912998/bts-army/"
+                          alt="Time magazine link"
+                          target="_blank"
+                          class="magazine-link"
+                          >Time magazine, Nov 2020</a
+                        >
                       </figcaption>
                     </figure>
                   </p>
@@ -105,7 +111,14 @@
                       </p>
                     </blockquote>
                     <figcaption class="blockquote-footer mt-2">
-                      Rolling Stone article, May 2021
+                      <a
+                        href="https://www.rollingstone.com/music/music-features/new-bts-song-2021-worlds-biggest-band-1166441/
+                     "
+                        alt="Rolling Stone link"
+                        target="_blank"
+                        class="magazine-link"
+                        >Rolling Stone article, May 2021</a
+                      >
                     </figcaption>
                   </figure>
                 </div>
@@ -166,8 +179,9 @@
                     Their musical style incorporates a wide range of genres like
                     pop, hip-hop, rap, R&B, dance/electronic, latin pop, urban
                     neosoul and many more, and their lyrics focus on social
-                    issues, mental health, self love and the struggles of youth.
-                    They co-produce and co-write most of their songs.
+                    issues, inclusivity, mental health, self-love and the
+                    struggles of youth, among others. They co-produce and
+                    co-write most of their songs.
                   </p>
                 </div>
               </div>
@@ -188,7 +202,13 @@
                       </p>
                     </blockquote>
                     <figcaption class="blockquote-footer mt-2">
-                      The New Yorker, June 2022
+                      <a
+                        href="https://www.newyorker.com/culture/culture-desk/joining-the-bts-army"
+                        alt="The New Yorker link"
+                        target="_blank"
+                        class="magazine-link"
+                        >The New Yorker, June 2022</a
+                      >
                     </figcaption>
                   </figure>
                 </div>
