Update intro blocks

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
           <span class="divider"></span>
         </div>
         <div class="intro-cards">
-          <div class="row mb-5" data-masonry='{"percentPosition": true }'>
-            <div class="col-4">
+          <div
+            class="row row-cols-md-3 row-cols-sm-1 mb-5"
+            data-masonry='{"percentPosition": true }'
+          >
+            <div class="col">
               <div class="card">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">The group...</h4>
@@ -53,9 +56,9 @@
                     Bangtan Sonyeondan; lit. Bulletproof Boy Scouts), is a South
                     Korean boy band consisting of 7 members, namely:
                     <strong>RM</strong>, <strong>Jin</strong>,
-                    <strong>Suga</strong>, <strong>J-Hope</strong>,
+                    <strong>SUGA</strong>, <strong>j-hope</strong>,
                     <strong>Jimin</strong>, <strong>V</strong> and
-                    <strong>Jungkook</strong>.
+                    <strong>Jung Kook</strong>.
                   </p>
                 </div>
               </div>
@@ -96,9 +99,10 @@
                   <p class="card-text m-0">
                     Almost 10 years since their debut, the group has uncountable
                     accolades from repeated number-one songs in charts around
-                    the world, to concequent sold-out concerts, numerous awards,
-                    S Korea's and major brands' ambassadoring to addressing,
-                    thrice, the United Nations General Assembly!
+                    the world, concequent sold-out concerts, numerous awards,
+                    Grammy nominations, S Korea's and major brands'
+                    ambassadoring to addressing, thrice, the United Nations
+                    General Assembly!
                   </p>
                   <figure>
                     <blockquote class="blockquote mt-3">
@@ -125,7 +129,7 @@
               </div>
             </div>
 
-            <div class="col-4">
+            <div class="col">
               <div class="card">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their logo...</h4>
@@ -161,15 +165,27 @@
               </div>
             </div>
 
-            <div class="col-4">
+            <div class="col">
               <div class="card">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their debut...</h4>
-                  <p class="card-text m-0">
+                  <p class="card-text m-0 mb-3">
                     They debuted on <strong>June 13, 2013</strong> under Big Hit
                     Music (currently part of HYBE Labels) with the lead single
                     'No More Dream' from the album '2 Cool 4 Skool'.
                   </p>
+                  <div class="card-img-bottom h-50">
+                    <iframe
+                      style="border-radius: 12px"
+                      src="https://open.spotify.com/embed/track/089PFeXotzDLNQz9NCk6pF?utm_source=generator"
+                      width="100%"
+                      height="152"
+                      frameborder="0"
+                      allowfullscreen=""
+                      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                      loading="lazy"
+                    ></iframe>
+                  </div>
                 </div>
               </div>
               <div class="card mt-4">
@@ -314,7 +330,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>Suga (슈가)</strong>
+                <strong>SUGA (슈가)</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -347,19 +363,19 @@
           <div class="col text-center">
             <img
               src="./img/hobi.jpg"
-              alt="Member's stage name: J-Hope"
+              alt="Member's stage name: j-hope"
               class="photo"
             />
             <ul class="profile">
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>J-Hope (제이홉)</strong>
+                <strong>j-hope (제이홉)</strong>
               </li>
               <li>
                 <u>Birth Name</u>
                 <br />
-                <strong>Jung Ho Seok (정호석)</strong>
+                <strong>Jeong Ho Seok (정호석)</strong>
               </li>
               <li>
                 <u>Position</u>
@@ -399,7 +415,7 @@
               <li>
                 <u>Birth Name</u>
                 <br />
-                <strong>Park Ji Min (박지민)</strong>
+                <strong>Pak Ji Min (박지민)</strong>
               </li>
               <li>
                 <u>Position</u>
@@ -470,12 +486,12 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>Jungkook (정국)</strong>
+                <strong>Jung Kook (정국)</strong>
               </li>
               <li>
                 <u>Birth Name</u>
                 <br />
-                <strong>Jeon Jung Kook (전정국)</strong>
+                <strong>Jeon Jeong Kook (전정국)</strong>
               </li>
               <li>
                 <u>Position</u>
@@ -495,7 +511,7 @@
               <li>
                 <u>Instagram</u>
                 <br />
-                <strong>-😕</strong>
+                <strong>n/a😕</strong>
               </li>
             </ul>
           </div>
