--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="banner-top"></div>
 
-    <div class="container">
+    <div class="container-fluid p-5">
       <header>
         <h1>BTS</h1>
         <h2>방탄소년단</h2>
@@ -53,7 +53,7 @@
                   <h4 class="card-title mb-3">The group...</h4>
                   <p class="card-text m-0">
                     <strong>BTS</strong> (Korean: 방탄소년단; romanization:
-                    Bangtan Sonyeondan; lit. Bulletproof Boy Scouts), is a South
+                    Bangtan Sonyeondan, lit. Bulletproof Boy Scouts), is a South
                     Korean boy band consisting of 7 members, namely:
                     <strong>RM</strong>, <strong>Jin</strong>,
                     <strong>SUGA</strong>, <strong>j-hope</strong>,
